--- a/better-movie-app/package.json
+++ b/better-movie-app/package.json
@@ -10,9 +10,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@appwrite.io/pink-icons": "^1.0.0",
     "@tailwindcss/vite": "^4.1.18",
+    "appwrite": "^21.5.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "react-use": "^17.6.0",
     "tailwindcss": "^4.1.18"
   },
   "devDependencies": {
